--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="header">
             <div class="logo">
-                <img src="./assets/images/bus_image.png" alt="Aire Lanes Logo">
+                <img src="./assets/img/bus_image.png" alt="Aire Lanes Logo">
             </div>
             <div class="web_name">
                 <a href="./index.html"><h2>AIRE LANES</h2></a>
