--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <header>
         <div class="header">
             <div class="logo">
-                <img src="./assets/img/bus_image.png" alt="Aire Lanes Logo">
+                <img src="./assets/img/bus_image.png" alt="Aire Liner Logo">
             </div>
             <div class="web_name">
-                <a href="./index.html"><h2>AIRE LANES</h2></a>
+                <a href="./index.html"><h2>AIRE LINER</h2></a>
             </div>
             <div class="menu_button">
                 <input type="checkbox" id="checkbox">
@@ -39,7 +39,7 @@
 
 <section class="cover_section">
     <div class="cover">
-        <img src="./assets/img/bus_cover.jpg" alt="Aire Lanes Cover">
+        <img src="./assets/img/bus_cover.png" alt="Aire Liner Cover">
     class+"bus_cover">
         <div class="cover_text">
             <h1>Magandang buhay!</h1>
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<sectionclass="searchseat">
+<section class="search_seat">
     <div class="searchseat">
         <!-- Round-trip and One-way checkboxes -->
         <label class="checkBox">
@@ -63,32 +63,31 @@
         </label>
 
         <!-- Departure and Destination dropdowns -->
-         <div class="location-selection">
+        <div class="location-selection">
             <div class="location-item">
-                <select id="departure"
-                <option value="" selected disabled>Departure</option>
-                <option value="Cubao">Cubao</option>
-                <option value="Sampaloc">Sampaloc</option>
-                <option value="Pasay">Pasay</option>
-                <option value="Caloocan">Caloocan</option>
-                <option value="PITX">PITX</option>
-            </select>
+                <select id="departure">
+                    <option value="" selected disabled>Departure</option>
+                    <option value="Cubao">Cubao</option>
+                    <option value="Sampaloc">Sampaloc</option>
+                    <option value="Pasay">Pasay</option>
+                    <option value="Caloocan">Caloocan</option>
+                    <option value="PITX">PITX</option>
+                </select>
             </div>
-         </div>
-         <div class="location-item">
-            <select id="destination">
-                <option value="" selected disabled>Destination</option>
-                <option value="Baguio">Baguio</option>
-                <option value="Alaminos">Alaminos</option>
-                <option value="Dagupan">Dagupan</option>
-                <option value="Bolinao">Bolinao</option>
-                <option value="Zambales">Zambales</option>
-            </select>
-         </div>
-    </div>
+            <div class="location-item">
+                <select id="destination">
+                    <option value="" selected disabled>Destination</option>
+                    <option value="Baguio">Baguio</option>
+                    <option value="Alaminos">Alaminos</option>
+                    <option value="Dagupan">Dagupan</option>
+                    <option value="Bolinao">Bolinao</option>
+                    <option value="Zambales">Zambales</option>
+                </select>
+            </div>
+        </div>
 
     <!-- Depart and Return datepickers -->
-     <div class="datepassenger">
+    <div class="datepassenger">
         <div class="datepick">
             <span class="depart" id="depart-date">Depart
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-calendar-fill" viewBox="0 0 16 16">
@@ -108,17 +107,17 @@
             <span class="passenger-count" id="passenger-count">1</span>
             <button class="passenger-btn" id="increase">+</button>
         </div>
-     </div>
+    </div>
 
-        <!-- Search button next to datepicker -->
-         <div class="search-button">
-            <a href="./pages/page1/index.html"><button class="button">Search</button></a>
-            </div>
-        </div>
-    </section>
+       <!-- Search Button next to datepicker -->
+       <div class="search_button">
+        <a href="./pages/page1/index.html"><button class="button">Search</button></a>
+    </div>
+</div>
+</section>
 
     <!-- Calendar -->
-     <div class="container calendar-container" id="calendar-container"> style="display: none;">
+    <div class="container calendar-container" id="calendar-container" style="display: none;">
         <div class="calendar">
             <header class="header-calendar">
                 <pre class="left">◀</pre>
@@ -146,7 +145,7 @@
     <footer class="footer_section">
         <div class="footer_content">
             <div class="footer_text">
-                <p>© 2025 Aire Lanes. All rights reserved.</p>
+                <p>&copy; 2025 Aire Liner. All rights reserved.</p>
             </div>
             <div class="footer_links">
                 <a href="#">About Us</a>
@@ -156,9 +155,7 @@
             </div>
         </div>
     </footer>
-
-    <script src="./assets/js/checkbox.js"></script>
-    <script src="./assets/js/calendar.js"></script>
-    <script src="./assets/js/passenger.js"></script>
-</body>
-</html>
+    
+    <script src="./assets/js/script.js"></script>
+    </body>
+    </html>
