feat(index.html): modify content and structure

--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -2,25 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable=no, maximum-scale=1.0, minimum-scale=1.0>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
     <title>Bus Station</title>
-    <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/schedule.css">
-    <link rel="stylesheet" href="./assets/css/footer.css">
-    <link rel="stylesheet" href="./assets/css/scroll.css">
-    
+    <link rel="stylesheet" href="../../assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+    <link rel="stylesheet" href="../../assets/css/scroll.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
     <div class="header">
         <div class="logo">
-            <img src="./assets/img/bus_image.png" alt="Aire Lanes Logo">
+            <img src="../../assets/img/bus_image.png" alt="Aire Lanes Logo">
         </div>
         <div class="web_name">
-            <a href="./index.html"><h2>AIRE LANES</h2></a>
+            <a href="../../index.html"><h2>AIRE LINER</h2></a>
         </div>
         <div class="menu_button">
             <input type="checkbox" id="checkbox">
@@ -34,40 +37,42 @@
 </header>
 
 <section class="schedule_procedure">
+    <h2></h2>
     <div class="schedule_container">
-        
-        <div class="schedule">
+
+        <div class="departure_time">
             <h1 class="title">Departure Time</h1>
-            <h3 class="time">12:30 AM</h3>
-            <h3 class="time">01:45 AM</h3>
-            <h3 class="time">02:00 AM</h3>
+            <h3 class="time bus1">12:30 AM</h3>
+            <h3 class="time bus2">01:45 AM</h3>
+            <h3 class="time bus3">02:00 AM</h3>
+
         </div>
 
         <div class="bus_class">
             <h1 class="title">Bus Class</h1>
-            <h3 class="class">Regular</h3>
-            <h3 class="class">Deluxe</h3>
-            <h3 class="class">First Class</h3>
+            <h3 class="class bus1">Regular</h3>
+            <h3 class="class bus2">Regular</h3>
+            <h3 class="class bus3">Regular</h3>
         </div>
 
         <div class="available_seats">
             <h1 class="title">Available Seats</h1>
-            <h3 class="seats">3</h3>
-            <h3 class="seats">5</h3>
-            <h3 class="seats">2</h3>
+            <h3 class="seats bus1"></h3>
+            <h3 class="seats bus2"></h3>
+            <h3 class="seats bus3"></h3>
         </div>
 
         <div class="fare">
             <h1 class="title">Fare</h1>
-            <h3 class="price">P 500.00</h3>
-            <h3 class="price">P 700.00</h3>
-            <h3 class="price">P 1000.00</h3>
+            <h3 class="price bus1"></h3>
+            <h3 class="price bus2"></h3>
+            <h3 class="price bus3"></h3>
         </div>
 
         <div class="book_button">
-            <a href="../page2/index.html"><button class="button">Book</button></a>
-            <a href="../page2/index.html"><button class="button">Book</button></a>
-            <a href="../page2/index.html"><button class="button">Book</button></a>
+            <a href="../page2/index.html"><button class="button bus1">Book</button></a>
+            <a href="../page2/index.html"><button class="button bus2">Book</button></a>
+            <a href="../page2/index.html"><button class="button bus3">Book</button></a>
         </div>
 
     </div>
@@ -76,7 +81,7 @@
 <footer class="footer_section">
     <div class="footer_content">
         <div class="footer_text">
-            <p>&copy; 2025 Aire Lanes. All rights reserved.</p>
+            <p>&copy; 2025 Aire Liner. All rights reserved.</p>
         </div>
         <div class="footer_links">
             <a href="#">About Us</a>
