fix(index.html): update image source from jpg to png

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <section class="cover_section">
     <div class="cover">
-        <img src="./assets/img/bus_cover.jpg" alt="Aire Lanes Cover" class="bus_cover">
+        <img src="./assets/img/bus_cover.png" alt="Aire Lanes Cover" class="bus_cover">
         <div class="cover_text">
             <h2>Gusto mo bang pumunta sa Baguio, Dagupan, at Zambales?</h2>
         </div>
