--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -20,7 +20,7 @@
 <header>
     <div class="header">
         <div class="logo">
-            <img src="../../assets/img/bus_image.png" alt="Aire Liner Logo">
+            <img src="../../assets/img/bus_image.png" alt="Aire Lanes Logo">
         </div>
         <div class="web_name">
             <a href="../../index.html"><h2>AIRE LINER</h2></a>
