feat(index.html): update structure and content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <section class="cover_section">
     <div class="cover">
-        <img src="./assets/img/bus_cover.png" alt="Aire Lanes Cover" class="bus_cover">
+        <img src="./assets/img/bus_cover.jpg" alt="Aire Lanes Cover" class="bus_cover">
         <div class="cover_text">
             <h2>Gusto mo bang pumunta sa Baguio, Dagupan, at Zambales?</h2>
         </div>
@@ -48,7 +48,6 @@
 
 <section class="search_seat">
         <div class="searchseat">
-            <!-- Round-trip and One-way checkboxes -->
             <label class="checkBox">
                 <input type="checkbox" id="roundTrip">
                 <div class="transition"></div>
@@ -60,7 +59,6 @@
                 <span class="label-text">One-way</span>
             </label>
 
-            <!-- Departure and Destination dropdowns -->
             <div class="location-selection">
                 <div class="location-item">
                     <select id="departure">
@@ -84,7 +82,6 @@
                 </div>
             </div>
 
-            <!-- Depart and Return datepickers -->
             <div class="datepassenger">
                 <div class="datepick">
                     <span class="depart" id="depart-date">Depart
@@ -107,14 +104,12 @@
                 </div>
             </div>
 
-            <!-- Search Button next to datepicker -->
             <div class="search_button">
                 <a href="./pages/page1/index.html"><button class="button">Search</button></a>
             </div>
         </div>
     </section>
 
-    <!-- Calendar -->
     <div class="container calendar-container" id="calendar-container" style="display: none;">
         <div class="calendar">
             <header class="header-calendar">
